--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.5
-	yarn_mappings=1.16.5+build.1
-	loader_version=0.11.0
+	minecraft_version=1.17.1
+	yarn_mappings=1.17.1+build.39
+	loader_version=0.11.6
 
 # Mod Properties
-	mod_version = 1.1.2
-	maven_group = com.github.ndrp
+	mod_version = 2.0.0
+	maven_group = com.philipzhan
 	archives_base_name = faster-minecarts
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.29.3+1.16
+	fabric_version=0.37.2+1.17
