Add acceleration and deceleration rail

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,10 +8,10 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.11.6
 
 # Mod Properties
-	mod_version = 2.0.0
+	mod_version = 2.0.2
 	maven_group = com.philipzhan
-	archives_base_name = faster-minecarts
+	archives_base_name = fasterminecarts
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.37.2+1.17
+	fabric_version=0.39.2+1.17
