--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.9-SNAPSHOT'
+	id 'fabric-loom' version '0.10-SNAPSHOT'
 	id 'maven-publish'
 	id 'eclipse'
 }
@@ -12,9 +12,12 @@ version = project.mod_version
 group = project.maven_group
 
 repositories {
-	jcenter()
+//	jcenter()
 	maven {
 		url = "https://maven.terraformersmc.com/releases/"
+	}
+	maven {
+		url = "https://maven.shedaniel.me/"
 	}
 }
 
@@ -30,13 +33,17 @@ dependencies {
 	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
 	// You may need to force-disable transitiveness on them.
 	
-	modApi("me.shedaniel.cloth:config-2:5.0.0") {
-        exclude(group: "net.fabricmc.fabric-api")
-    }
+//	modApi("me.shedaniel.cloth:config-2:5.0.0") {
+//        exclude(group: "net.fabricmc.fabric-api")
+//    }
+
+	modApi("me.shedaniel.cloth:cloth-config-fabric:5.0.38") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
     
-    modApi("me.sargunvohra.mcmods:autoconfig1u:3.3.1") {
-        exclude(group: "net.fabricmc.fabric-api")
-    }
+//    modApi("me.sargunvohra.mcmods:autoconfig1u:3.3.1") {
+//        exclude(group: "net.fabricmc.fabric-api")
+//    }
     
 //    modImplementation "io.github.prospector:modmenu:1.14.13+build.19"
 	modImplementation "com.terraformersmc:modmenu:2.0.5"
