--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.18.1
-	yarn_mappings=1.18.1+build.18
-	loader_version=0.12.12
+	minecraft_version=1.19.2
+	yarn_mappings=1.19.2+build.1
+	loader_version=0.14.9
 
 # Mod Properties
-	mod_version = 2.2.4
-	maven_group = com.philipzhan
+	mod_version = 2.3
+	maven_group = com.fiddleyowl
 	archives_base_name = fasterminecarts
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.46.0+1.18
+	fabric_version=0.59.0+1.19.2
